Join 2 testcases for CompoundName. Stricter testcase for CompoundName, to also test internals. Fix single value append.